P1 Implementation 24-10-2025 12:40
